# yt-shorts-automation

./: README.md  pyproject.toml
src/shorts_automation/: __init__.py  cli.py  generator.py  models.py
tests/: test_generator.py
