[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shorts-automation"
version = "0.1.0"
description = "AI-powered YouTube Shorts automation CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
shorts-automation = "shorts_automation.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
